<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBackground"
    android:orientation="vertical"
    android:weightSum="10">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6.5"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="120dp"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/tvText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivImage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/gotham_bold"
            android:text="@string/full_circle"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/gotham_book"
            android:gravity="center"
            android:text="@string/description"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="3.5"
        android:background="@drawable/bg_login_screen"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tvLoginText"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tvPhoneCode"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/gotham_book"
            android:text="@string/login_text"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvPhoneCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="65dp"
            android:fontFamily="@font/gotham_book"
            android:textSize="16sp"
            android:text="+91"
            android:layout_marginLeft="25dp"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/gotham_book"
            android:textSize="16sp"
            android:layout_toEndOf="@+id/tvPhoneCode"
            android:hint="@string/hint_phone_number"
            android:layout_toRightOf="@+id/tvPhoneCode"
            android:layout_marginLeft="10dp" />

        <Button
            android:id="@+id/btnProceed"
            android:layout_width="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPhoneCode"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/gotham_medium"
            android:text="@string/proceed"
            android:background="@drawable/btn_yellow"
            android:textSize="16sp" />
    </RelativeLayout>

</LinearLayout>